# OpenSSL_Symetric_Encryption

./: CMakeLists.txt  README.md  main.cpp  symetric_encyprtion.cpp  symetric_encyprtion.h
